--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/icons-carbon": "^1.2.20",
+    "@iconify/icons-material-symbols": "^1.2.58",
+    "@iconify/icons-mdi": "^1.2.48",
+    "@iconify/icons-tabler": "^1.2.95",
+    "@iconify/react": "^5.2.1",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.4.1"
+    "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
